# freertos-socfpga

./: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/hello_world/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/cli_app/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_blinky/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_freertosplus_basic/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/apps/samples/main_full/: README.md
FreeRTOS/Demo/CORTEX_A55_SOCFPGA/startup/: cpu_init.S
FreeRTOS/FreeRTOS-Plus/Source/portable/NetworkInterface/SOCFPGA/: NetworkInterface.c
FreeRTOS/portable/GCC/ARM_CA55_64_BIT/: port.c  portSocfpga.c
drivers/dma/: socfpga_dma.c  socfpga_dma.h
drivers/gic/: socfpga_interrupt.c  socfpga_interrupt.h
rsu/portable/: CMakeLists.txt
rsu/portable/dependency/: CMakeLists.txt
rsu/portable/dependency/freeRTOS/: CMakeLists.txt
samples/: README.md
samples/fpga_manager/: fpga_manager_sample.c  fpga_pr_sample.c
samples/seu/: seu_sample.c
tools/: README.md
